Validantion inputs and style of alert error

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <main>
                 <header>
                     <h1>Calcule e descubra seu IMC</h1>
-                    <p>IMC é a sigla para Índice de Masssa Corpórea, parâmetro adotado pela Organização Muncial de Saúde
+                    <p>
+                        IMC é a sigla para Índice de Masssa Corpórea, parâmetro adotado pela Organização Muncial de Saúde
                         para calcular o peso ideal de cada pessoa.
                     </p>
                 </header>
@@ -42,6 +43,10 @@
 
                 <p id="statusImc"></p>
             </section>
+        </div>
+
+        <div class="alertError" >
+            <span id="messageAlert"></span>
         </div>
     </div>
 </body>
